tests/Tuc/Fixtures/errors/WrongDataName-post.tuc
tuc parse error test
participants
    GenericService parts
    [PersonDatabase] parts

GenericService
    .Foo -> [PersonDatabase]
